# procmux

./: .envrc  .gitignore  .python-virtualenv  LICENSE.txt  Makefile  README.md  build_and_publish.sh  dev-requirements.in  dev-requirements.txt  flake.nix  mprocs.yaml  procmux.override.yaml  procmux.py  procmux.yaml  pyproject.toml  pytest.ini  readme.local.md  requirements.in  requirements.txt  result  setup.py  test.yml  test2.yml
.github/workflows/: pytest.yml
app/: __main__.py  args.py  config.py  context.py  exec.py  interpolation.py  log.py  main.py  terminal_manager.py  tui_state.py
app/server/: client.py  server.py
app/tui/: __init__.py  app.py  command_form.py  controller.py  docs.py  focus.py  help.py  interpolation_dialog.py  keybindings.py  process_description.py  side_bar.py  state.py  style.py  terminal.py  types.py
app/tui/controller/: terminal_controller.py  tui_controller.py
app/tui/state/: process_state.py  terminal_state.py  tui_state.py
app/tui/view/: command_form.py  docs.py  help.py  process_description.py  side_bar.py  terminal.py
app/util/: interpolation.py
dead/: pty_test.py  tui.py  tui_scratch.py
dead/renderables/: scrollable_list.py
dead/widgets/: process_list_widget.py
procmux/: __init__.py  args.py  config.py  main.py
procmux/server/: client.py  server.py
procmux/tui/: app.py  interpolation_dialog.py  keybindings.py  types.py
procmux/tui/controller/: terminal_controller.py  tui_controller.py
procmux/tui/state/: process_state.py  terminal_state.py  (+1 more)
procmux/util/: interpolation.py
test/: test_exec.py  test_tui.py
(+5 files in other folders)
