[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "procmux"
version = '1.0.12'
readme = "README.md"
requires-python = ">=3.9.6"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
authors = [
    {name = "Nick Pisani", email = "napisani@yahoo.com"},
]
description = 'a TUI utility for running multiple commands in parallel in easily switchable terminals'
dependencies = [
    "hiyapyco==0.5.1",
    "prompt-toolkit==2.0.10",
    "ptterm==0.2",
    "pyte==0.8.1",
    "pytest==7.1.3",
]

[project.scripts]
procmux = "procmux:start_cli"

[project.urls]
homepage = "https://github.com/napisani/procmux"
repository = "https://github.com/napisani/procmux"
documentation = "https://github.com/napisani/procmux"

[tool.uv]
package = true

[tool.hatch.version]
path = "procmux.py"  # If you keep the version info within the module, otherwise adjust accordingly

[tool.hatch.build.targets.sdist]
include = ["app/**", "pyproject.toml", "procmux.py"] 

[tool.hatch.envs.default]
dependencies = ["hatchling"]
